copied from new website

--- a/docs/invisibility/style1.css
+++ b/docs/invisibility/style1.css
@@ -15,6 +15,16 @@
     background:rgba(0, 0, 0, 0.3);
     color:#ede7dd;
 }
+h1{
+    display:block;
+    width: 100%;
+    font-size: 20px;
+    font-style: italic;
+    height:40px;
+    text-align: center;
+    background:none;
+    color:#e77810;
+}
 .desc{
     text-align: center;
     font-size: 22px;
@@ -28,6 +38,11 @@
     text-align: center;
     background: none;
 }
+.opt img {
+    background: none;
+    width: 600px;
+    height: 200px;
+}
 a{
     display: inline;
     font-size: 18px;
@@ -37,6 +52,21 @@ a{
     background: none;
     background-color:rgba(0, 0, 0, 0.7);
     color: #b36910;
+}
+.dir{
+    text-align: center;
+    background: none;
+    margin-top: 50px;
+}
+.dir a{
+    display: inline;
+    font-size: 16px;
+    text-decoration: none;
+    padding: 12px;
+    border-radius: 10px;
+    background: none;
+    background-color:#2c2a2a;
+    color: #fffcf9;
 }
 .footer::after{
     position: fixed;
