--- a/docs/invisibility/style1.css
+++ b/docs/invisibility/style1.css
@@ -1,5 +1,5 @@
 * {
-    background-image:url(images/autumn.jpg);
+    background-image:url(/docs/images/autumn.jpg);
     background-size: cover;
     font-family:cursive;
     font-weight: bold;
